// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`demo-iframe \`gl\` is false renders as expected 1`] = `
<div>
  <iframe
    height={400}
    src="https://giphy.com/embed/ule4vhcY1xEKQ"
    title="Cool gif"
    width="100%"
  />
  <a
    className="link"
    href="https://giphy.com/embed/ule4vhcY1xEKQ"
  >
    <span>
      View fullscreen
       
      <span
        className="txt-nowrap"
      >
        demo
        <svg
          aria-hidden="true"
          className="events-none icon inline-block align-t"
          data-testid="icon-chevron-right"
          focusable="false"
          style={
            Object {
              "height": "1.5em",
              "width": "1.5em",
            }
          }
        >
          <use
            xlinkHref="#icon-chevron-right"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          chevron-right
        </span>
      </span>
    </span>
  </a>
</div>
`;

exports[`demo-iframe Basic renders as expected 1`] = `
<div
  style={
    Object {
      "minHeight": 430,
    }
  }
>
  <div
    className="dr-ui--note py18 px18 round flex mb18 bg-orange-faint color-orange-dark"
  >
    <div
      className="mr18 none block-mm pt3"
    >
      <div
        className="bg-orange-lighter round-full color-orange flex flex--center-main flex--center-cross"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          aria-hidden="true"
          className="events-none icon"
          data-testid="icon-alert"
          focusable="false"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <use
            xlinkHref="#icon-alert"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          alert
        </span>
      </div>
    </div>
    <div
      className="w-full prose wmin0"
    >
      <div
        className="txt-bold mb6"
      >
        Mapbox GL unsupported
      </div>
      Mapbox GL is unsupported due to insufficient worker support.
    </div>
  </div>
</div>
`;

exports[`demo-iframe Missing token will return null component renders as expected 1`] = `null`;

exports[`demo-iframe Overrides the MapboxAccessToken with another token renders as expected 1`] = `
<div>
  <iframe
    height={400}
    src="https://api.mapbox.com/styles/v1/examples/cjj0b5ie80ec32so5uo8ox21m.html?fresh=true&title=true&access_token=p.key10101010101010101010#15/40.751589/-73.986485/-28/60"
    title="Static API request"
    width="100%"
  />
  <a
    className="link"
    href="https://api.mapbox.com/styles/v1/examples/cjj0b5ie80ec32so5uo8ox21m.html?fresh=true&title=true&access_token=p.key10101010101010101010#15/40.751589/-73.986485/-28/60"
  >
    <span>
      View fullscreen
       
      <span
        className="txt-nowrap"
      >
        demo
        <svg
          aria-hidden="true"
          className="events-none icon inline-block align-t"
          data-testid="icon-chevron-right"
          focusable="false"
          style={
            Object {
              "height": "1.5em",
              "width": "1.5em",
            }
          }
        >
          <use
            xlinkHref="#icon-chevron-right"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
        <span
          style={
            Object {
              "border": 0,
              "clip": "rect(0, 0, 0, 0)",
              "height": 1,
              "margin": -1,
              "overflow": "hidden",
              "padding": 0,
              "position": "absolute",
              "whiteSpace": "nowrap",
              "width": 1,
              "wordWrap": "normal",
            }
          }
        >
          chevron-right
        </span>
      </span>
    </span>
  </a>
</div>
`;
